--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 
 body {
     font-family: "Poppins", sans-serif;
+    background-color: #d3d9d4;
 }
 
 html {
@@ -55,11 +56,12 @@ a:hover {
     color: grey;
     text-decoration: underline;
     text-underline-offset: 1rem;
-    text-decoration-color: rgb(181, 181, 181)
+    text-decoration-color: rgb(181, 181, 181);
 }
 
 .logo {
-    font-size: 2rem;
+    width: 250px;
+
 }
 
 .logo:hover {
