--- a/@mediaqueries.css
+++ b/@mediaqueries.css
@@ -15,13 +15,22 @@
     #hamburger-nav {
         display: flex;
     }
-    #experience, 
+    #experience {
+        margin-top: 2rem;
+    }
     .experience-details-container {
         margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        
     }
     #profile, 
     .section-container {
         display: block;
+    }
+
+    .pr-details-container {
+        text-align: center;
     }
     .arrow {
         display: none;
@@ -90,8 +99,10 @@
     }
     .title {
         font-size: 2rem;
+
     }
     .text-container {
         text-align: justify;
     }
+
 }
