--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,11 @@ section {
 
 .education-date {
     display: block;
+    padding-bottom: 2rem;
+    line-height: 1.2;
+}
+.education-date li {
+    line-height: 1.4;
 }
 
 /* ICONS */
@@ -371,13 +376,20 @@ section {
 .experience-sub-title {
     
     font-weight: 600;
-    font-size: 1.75rem;
+    font-size: 1.45rem;
     
 }
 
 .experience-details-container {
     display: flex;
     justify-content: center;
+    flex-direction: row;
+    gap: 2.5rem;
+}
+
+.skills-details-container {
+    display: flex;
+    
     flex-direction: row;
     gap: 2.5rem;
 }
